--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,19 @@
       <artifactId>json</artifactId>
       <version>20231013</version>
     </dependency>
-      <dependency>
+
+    <dependency>
           <groupId>org.jetbrains</groupId>
           <artifactId>annotations</artifactId>
           <version>RELEASE</version>
           <scope>compile</scope>
       </dependency>
+
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
   </dependencies>
 
   <build>
