--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
     </dependency>
+
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId></artifactId>
+      </dependency>
   </dependencies>
 
   <build>
