--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,24 @@
 <junit.version>5.10.0</junit.version>  </properties>
 
   <dependencies>
+
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-core</artifactId>
+          <version>3.12.4</version>
+          <scope>test</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>org.easymock</groupId>
+          <artifactId>easymock</artifactId>
+          <version>4.3</version>
+          <scope>test</scope>
+      </dependency>
+
+
+
+
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
